# backend/internal/controller/dto/tag_dto.go
@@ -1,0 +1,9 @@
+package dto
+
+type TagCreateInput struct {
+    Name string `json:"name" binding:"required"`
+}
+
+type TagUpdateInput struct {
+    Name string `json:"name" binding:"required"`
+}
